# documents_center

./: .dockerignore  docker-compose.yml  pyproject.toml  start_prod.sh  utils.py
chat/: app.py  auth.py  chat_ui.py  config.py  grpc_client.py  pyproject.toml  rag_service.py  start.sh
chat/.streamlit/: config.toml
chat/pages/: conversation.py  login.py  register.py
client/: index.html  package-lock.json  package.json
server/: .env  .env.prod.example  .gitignore  main.py  pyproject.toml  response.sh  start.sh  start_dev.sh  start_grpc.sh  startdemo.sh  startfastapi.sh  testdemo.sh  user_info.sh  utils.py
server/agent/: config_data.py  knowledge_base.py  multi_agent.py  pgvector_store.py  product_agent.py  product_base.py  rag.py  router.py  sqlalchemy_history_store.py  vector_stores.py
server/base_config/: database.py  env.py
server/common/: resp.py
server/database/: base_model.py  config.py  models.py  session.py
server/grpc_server/: chat_servicer.py  client_servicer.py  server.py
server/migrations/: env.py
server/mock/: chat.sh  upload_file.sh
server/module_chat/: chat_controller.py  chat_service.py  chat_vo.py
server/module_client/: client_controller.py  client_service.py  client_vo.py
server/module_file/: file_controller.py
server/module_order/: order_controller.py  order_service.py  order_vo.py
server/module_product/: product_controller.py  product_vo.py
server/module_user/: user_controller.py  user_vo.py
server/protos/: chat.proto  client.proto
server/scripts/: generate_grpc.sh  watch_grpc.py
server/utils/: file.py  util.py
(+63 files in other folders)
