[project]
name = "sqlalchemy-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlacodegen>=4.0.3",
    "sqlalchemy[asyncio]>=2.0.50",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
